--- a/package.json
+++ b/package.json
@@ -56,34 +56,37 @@
   "author": "leejooy96 <leejooy96@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^6.2.0",
+    "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^13.1.7",
+    "electron": "^14.0.1",
     "electron-builder": "^22.11.7",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-scripts": "^4.0.3",
-    "wait-on": "^6.0.0"
+    "wait-on": "^6.0.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
-    "@electron/remote": "^1.2.0",
+    "@electron/remote": "^2.0.1",
     "electron-localshortcut": "^3.2.1",
-    "electron-store": "^8.0.0",
-    "i18next": "^20.3.4",
+    "electron-store": "^8.0.1",
+    "i18next": "^20.6.1",
     "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.2.8",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.11.3",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
+    "react-i18next": "^11.12.0",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0"
   },
