--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "retron",
   "version": "1.0.0",
-  "description": "Electron + React Template",
+  "description": "Electron + React + Material-UI Template",
   "main": "app/index.js",
   "homepage": "./",
   "scripts": {
@@ -56,25 +56,26 @@
   "author": "leejooy96 <leejooy96@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
     "electron": "^15.1.1",
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-scripts": "^4.0.3",
-    "wait-on": "^6.0.0",
-    "webpack": "^5.57.1",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "wait-on": "^6.0.0"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.0.1",
     "i18next": "^21.2.4",
