--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "config/**/*"
     ]
   },
-  "author": "leejooy96 <leejooy96@gmail.com>",
+  "author": "jooy2 <jootc.help@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
