--- a/package.json
+++ b/package.json
@@ -60,39 +60,39 @@
   "license": "MIT",
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
-    "concurrently": "^6.3.0",
+    "concurrently": "^6.4.0",
     "cross-env": "^7.0.3",
-    "electron": "^15.3.1",
-    "electron-builder": "^22.13.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "electron": "^16.0.2",
+    "electron-builder": "^22.14.5",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "^19.0.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react-scripts": "^4.0.3",
     "wait-on": "^6.0.0"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.1",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.0.1",
-    "i18next": "^21.4.1",
+    "i18next": "^21.5.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.13.0",
+    "react-i18next": "^11.14.3",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.1",
-    "react-router-dom": "^6.0.1",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.1"
   },
   "eslintConfig": {
     "extends": "react-app"
