--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-scripts start",
     "start-interface": "cross-env PORT=9090 BROWSER=none npm run start",
     "start-electron": "electron .",
-    "start-electron-after-interface": "wait-on http://localhost:9090 && npm run start-electron",
+    "start-electron-after-interface": "wait-on http://127.0.0.1:9090 && npm run start-electron",
     "build:mac": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false GENERATE_SOURCEMAP=false NODE_ENV=production react-scripts build && electron-builder --mac",
     "build:win": "cross-env GENERATE_SOURCEMAP=false NODE_ENV=production react-scripts build && electron-builder --windows nsis:x64",
     "build:win-portable": "react-scripts build && electron-builder --windows portable --x64",
