--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "retron",
   "version": "1.0.0",
   "description": "Electron + React + Material-UI Template",
-  "main": "app/index.js",
-  "homepage": "./",
+  "main": "dist/main/index.js",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "start-interface": "cross-env PORT=9090 BROWSER=none npm run start",
+    "start": "vite",
+    "start-interface": "cross-env PORT=5173 BROWSER=none npm run start",
     "start-electron": "electron .",
-    "start-electron-after-interface": "wait-on http://127.0.0.1:9090 && npm run start-electron",
-    "build:mac": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false GENERATE_SOURCEMAP=false NODE_ENV=production react-scripts build && electron-builder --mac",
-    "build:win": "cross-env GENERATE_SOURCEMAP=false NODE_ENV=production react-scripts build && electron-builder --windows nsis:x64",
-    "build:win-portable": "react-scripts build && electron-builder --windows portable --x64",
-    "build:linux": "cross-env GENERATE_SOURCEMAP=false NODE_ENV=production react-scripts build && electron-builder --linux",
+    "start-electron-after-interface": "wait-on http://127.0.0.1:5173 && npm run start-electron",
+    "build:mac": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false GENERATE_SOURCEMAP=false NODE_ENV=production vite build && electron-builder --mac",
+    "build:win": "cross-env GENERATE_SOURCEMAP=false NODE_ENV=production && vite build && electron-builder --windows nsis:x64",
+    "build:win-portable": "cross-env vite build NODE_ENV=production && electron-builder --windows portable --x64",
+    "build:linux": "cross-env GENERATE_SOURCEMAP=false NODE_ENV=production vite build && electron-builder --linux",
     "dev": "cross-env NODE_ENV=dev concurrently -n interface,app 'npm:start-interface' 'npm:start-electron-after-interface'",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src",
@@ -48,29 +47,30 @@
     },
     "directories": {
       "buildResources": "./resources/installer/",
-      "output": "./dist/"
+      "output": "./dist/release/${version}"
     },
     "files": [
-      "app/**/*",
-      "build/**/*",
-      "config/**/*"
+      "dist/**/*",
+      "!dist/release/**/*"
     ]
   },
   "author": "jooy2 <jootc.help@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.1",
     "babel-plugin-import": "^1.13.5",
     "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
-    "electron": "^20.0.2",
+    "electron": "^20.0.3",
     "electron-builder": "^23.3.3",
-    "eslint": "7.32.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "react-scripts": "^4.0.3",
+    "vite": "^3.0.9",
+    "vite-plugin-electron": "^0.9.2",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
@@ -78,15 +78,15 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
+    "@mui/material": "^5.10.1",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.1.0",
-    "i18next": "^21.9.0",
+    "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "i18next-http-backend": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.3",
+    "react-i18next": "^11.18.4",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
