add mac distribution targets

--- a/package.json
+++ b/package.json
@@ -34,7 +34,19 @@
       "oneClick": true
     },
     "mac": {
-      "identity": null
+      "identity": null,
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "icon": "resources/installer/icon.icns",
+      "type": "distribution",
+      "target": {
+        "target": "dmg",
+        "arch": [
+          "x64",
+          "arm64",
+          "universal"
+        ]
+      }
     },
     "linux": {
       "executableName": "retron",
