--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "appId": "com.example.retron",
     "asar": true,
     "compression": "maximum",
+    "artifactName": "${productName} ${version}.${ext}",
     "extends": null,
     "win": {
       "target": [
