naming the portable package differently than the nsis package

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
       ],
       "icon": "./resources/installer/icon.ico"
     },
+    "portable": {
+      "artifactName": "${productName} ${version} Portable.${ext}"
+    },
     "nsis": {
       "oneClick": true
     },
