--- a/package.json
+++ b/package.json
@@ -98,39 +98,39 @@
   "author": "jooy2 <jootc.help@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react": "^2.1.0",
     "babel-plugin-import": "^1.13.5",
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
-    "electron": "^20.0.3",
+    "electron": "^21.0.1",
     "electron-builder": "^23.3.3",
-    "eslint": "8.22.0",
+    "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "vite": "^3.0.9",
-    "vite-plugin-electron": "^0.9.2",
+    "vite": "^3.1.4",
+    "vite-plugin-electron": "^0.9.3",
     "wait-on": "^6.0.1"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.1",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.1.0",
-    "i18next": "^21.9.1",
+    "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
-    "i18next-http-backend": "^1.4.1",
+    "i18next-http-backend": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.4",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-i18next": "^11.18.6",
+    "react-redux": "^8.0.4",
+    "react-router": "^6.4.1",
+    "react-router-dom": "^6.4.1",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.4.1"
