retron now uses typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,29 @@
 {
+	"root": true,
   "env": {
     "browser": true,
     "node": true,
     "es6": true
   },
+	"parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2020
+    "parser": "@typescript-eslint/parser",
+    "sourceType": "module",
+    "ecmaVersion": 2022,
+		"ecmaFeatures": {
+			"jsx": true
+		}
   },
   "extends": [
     "airbnb",
     "airbnb/hooks"
   ],
+	"plugins": ["react"],
+	"settings":{
+		"import/resolver":{
+			"typescript":{}
+		}
+	},
   "rules": {
     "linebreak-style": 0,
     "arrow-parens": 0,
@@ -20,11 +33,12 @@
     "no-tabs": 0,
     "no-mixed-spaces-and-tabs": 0,
     "max-len": 1,
+		"import/extensions": 0,
     "import/no-extraneous-dependencies": 0,
     "react/react-in-jsx-scope": "off",
     "react/function-component-definition": 0,
-    "react/jsx-filename-extension": [1, {
-      "extensions": [".js", ".jsx"]
+    "react/jsx-filename-extension": [2, {
+      "extensions": [".js", ".jsx", ".ts", ".tsx"]
     }],
     "react/prop-types": 0,
     "react-hooks/exhaustive-deps": 0,
