--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "npm run build:pre && electron-builder -wml",
-    "build:pre": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false GENERATE_SOURCEMAP=false NODE_ENV=production vite build",
+    "build:pre": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false GENERATE_SOURCEMAP=false NODE_ENV=production tsc && vite build",
     "build:win": "npm run build:pre && electron-builder --windows",
     "build:mac": "npm run build:pre && electron-builder --mac",
     "build:linux": "npm run build:pre && electron-builder --linux",
@@ -17,6 +17,9 @@
   "author": "jooy2 <jootc.help@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-plugin-import": "^1.13.5",
     "cross-env": "^7.0.3",
@@ -24,10 +27,12 @@
     "electron-builder": "^23.6.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^4.8.4",
     "vite": "^3.2.0",
     "vite-plugin-electron": "^0.9.3"
   },
@@ -39,7 +44,7 @@
     "@mui/material": "^5.10.11",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.1.0",
-    "i18next": "^22.0.2",
+    "i18next": "^22.0.4",
     "i18next-browser-languagedetector": "^7.0.0",
     "i18next-http-backend": "^2.0.0",
     "react": "^18.2.0",
