--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,81 +1,73 @@
 {
-  "productName": "Retron",
-  "appId": "com.example.retron",
-  "asar": true,
-  "extends": null,
-  "compression": "maximum",
-  "copyright": "ⓒ 2022 ${author}",
-  "artifactName": "${productName} ${version}_${arch}.${ext}",
-  "directories": {
-    "buildResources": "./resources/installer/",
-    "output": "./dist/release/${version}"
+  productName: 'Retron',
+  appId: 'com.example.retron',
+  asar: true,
+  extends: null,
+  compression: 'maximum',
+  copyright: 'ⓒ 2022 ${author}',
+  artifactName: '${productName} ${version}_${arch}.${ext}',
+  directories: {
+    buildResources: './resources/installer/',
+    output: './dist/release/${version}',
   },
-  "files": [
-    "dist/**/*",
-    "!dist/release/**/*",
-    "!dist/main/index.ts"
-  ],
-  "win": {
-    "target": [
+  files: ['dist/**/*', '!dist/release/**/*', '!dist/main/index.ts'],
+  win: {
+    target: [
       {
-        "target": "appx",
-        "arch": "x64"
+        target: 'appx',
+        arch: 'x64',
       },
       {
-        "target": "zip",
-        "arch": "x64"
+        target: 'zip',
+        arch: 'x64',
       },
       {
-        "target": "portable",
-        "arch": "x64"
+        target: 'portable',
+        arch: 'x64',
       },
       {
-        "target": "nsis",
-        "arch": "x64"
-      }
+        target: 'nsis',
+        arch: 'x64',
+      },
     ],
-    "icon": "./resources/installer/icon.ico"
+    icon: './resources/installer/icon.ico',
   },
-  "portable": {
-    "artifactName": "${productName} ${version} Portable.${ext}"
+  portable: {
+    artifactName: '${productName} ${version} Portable.${ext}',
   },
-  "nsis": {
-    "oneClick": true
+  nsis: {
+    oneClick: true,
   },
-  "mac": {
-    "identity": null,
-    "hardenedRuntime": true,
-    "gatekeeperAssess": false,
-    "icon": "resources/installer/icon.icns",
-    "type": "distribution",
-    "target": [
+  mac: {
+    identity: null,
+    hardenedRuntime: true,
+    gatekeeperAssess: false,
+    icon: 'resources/installer/icon.icns',
+    type: 'distribution',
+    target: [
       {
-        "target": "dmg",
-        "arch": [
-          "x64",
-          "arm64",
-          "universal"
-        ]
-      }
-    ]
+        target: 'dmg',
+        arch: ['x64', 'arm64', 'universal'],
+      },
+    ],
   },
-  "linux": {
-    "executableName": "retron",
-    "icon": "resources/installer",
-    "category": "Utility",
-    "target": [
+  linux: {
+    executableName: 'retron',
+    icon: 'resources/installer',
+    category: 'Utility',
+    target: [
       {
-        "target": "snap",
-        "arch": "x64"
+        target: 'snap',
+        arch: 'x64',
       },
       {
-        "target": "deb",
-        "arch": "x64"
+        target: 'deb',
+        arch: 'x64',
       },
       {
-        "target": "rpm",
-        "arch": "x64"
-      }
-    ]
-  }
+        target: 'rpm',
+        arch: 'x64',
+      },
+    ],
+  },
 }
