--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "babel-plugin-import": "^1.13.5",
     "cross-env": "^7.0.3",
     "electron": "^21.2.2",
     "electron-builder": "^23.6.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
@@ -55,7 +55,6 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.4",
-    "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
