--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.2",
-    "vite-plugin-electron": "^0.10.2"
+    "vite-plugin-electron": "^0.10.2",
+    "vite-plugin-electron-renderer": "^0.10.2"
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
