--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,18 +10,16 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
     "paths": {
       "@/*": ["./src/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable"]
   },
-  "include": ["src/renderer/**/*/*.ts", "src/renderer/**/*/*.d.ts", "src/renderer/**/*/*.tsx"],
+  "include": ["src/renderer/**/*/*.ts", "src/renderer/**/*/*.d.ts", "src/renderer/**/*/*.tsx", "src/preload/**/*/*.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
