ignore unknown css property for eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "max-len": 1,
     "import/extensions": 0,
     "import/no-extraneous-dependencies": 0,
+    "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "react/react-in-jsx-scope": "off",
     "react/function-component-definition": 0,
     "react/jsx-filename-extension": [
@@ -43,7 +44,6 @@
     "react/prop-types": 0,
     "react-hooks/exhaustive-deps": 0,
     "react/jsx-props-no-spreading": 0,
-    "react/no-unknown-property": 1,
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/label-has-associated-control": 1,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
