--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ViteJS + Electron + React + Material-UI Template",
   "homepage": "https://github.com/jooy2/retron",
-  "author": "jooy2 <jootc.help@gmail.com>",
+  "author": "jooy2 <jooy2.contact@gmail.com>",
   "license": "MIT",
   "main": "dist/main/index.js",
   "scripts": {
@@ -17,23 +17,23 @@
     "format:fix": "prettier . --write"
   },
   "devDependencies": {
-    "@types/react": "^18.0.25",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-react": "^2.2.0",
     "cross-env": "^7.0.3",
-    "electron": "^21.2.3",
+    "electron": "^22.0.0",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.27.0",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.4",
     "vite-plugin-electron": "^0.10.4",
@@ -44,18 +44,18 @@
     "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.14",
-    "@mui/material": "^5.10.14",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "electron-localshortcut": "^3.2.1",
     "electron-store": "^8.1.0",
-    "i18next": "^22.0.5",
+    "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.0.1",
+    "i18next-http-backend": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.4.4",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.4.2"
