--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "jooy2 <jooy2.contact@gmail.com>",
   "license": "MIT",
   "main": "dist/main/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jooy2/retron.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jooy2/retron/issues"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "npm run build:pre && electron-builder -wml",
