--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.0",
-    "redux": "^4.2.1"
+    "react-router-dom": "^6.8.0"
   },
   "eslintConfig": {
     "extends": "react-app"
