add missing include path in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "src/renderer/**/*/*.ts",
     "src/renderer/**/*/*.d.ts",
     "src/renderer/**/*/*.tsx",
+    "src/renderer/*.ts",
+    "src/renderer/*.tsx",
     "src/preload/**/*/*.ts"
   ],
   "references": [
