--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "src/renderer/**/*/*.tsx",
     "src/renderer/*.ts",
     "src/renderer/*.tsx",
-    "src/preload/**/*/*.ts"
+    "src/preload/**/*/*.ts",
+    "src/preload/**/*/*.d.ts"
   ],
   "references": [
     {
