--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -10,7 +10,7 @@
     buildResources: './buildAssets/installer/',
     output: './release/${version}',
   },
-  files: ['dist/**/*', '!release/**/*'],
+  files: ['dist/**/*', '!release/**/*', '!tests/**/*'],
   win: {
     target: [
       {
@@ -39,6 +39,7 @@
     oneClick: true,
   },
   mac: {
+    bundleVersion: '1.0',
     identity: null,
     hardenedRuntime: true,
     gatekeeperAssess: false,
