--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "build:win": "npm run build:pre && electron-builder --windows",
     "build:mac": "npm run build:pre && electron-builder --mac",
     "build:linux": "npm run build:pre && electron-builder --linux",
+    "lint": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter src",
+    "lint:fix": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "test": "npm run build:dir && xvfb-maybe -- playwright test"
@@ -40,6 +42,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
