--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "electron": "^26.1.0",
     "electron-builder": "^24.6.3",
+    "electron-extension-installer": "^1.2.0",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
