move `electron-builder` config and use dynamic configurations

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "dev": "vite",
     "dev:debug": "vite -d",
     "dev:debug:force": "vite -d --force",
-    "build": "npm run build:pre && electron-builder -wml",
+    "build": "npm run build:pre && electron-builder --config=buildAssets/builder/config.js",
     "build:pre": "tsc && vite build",
-    "build:dir": "npm run build:pre && electron-builder --dir",
-    "build:win": "npm run build:pre && electron-builder --windows",
-    "build:mac": "npm run build:pre && electron-builder --mac",
-    "build:linux": "npm run build:pre && electron-builder --linux",
+    "build:all": "npm run build:pre && electron-builder -wml --config=buildAssets/builder/config.js",
+    "build:dir": "npm run build:pre && electron-builder --dir --config=buildAssets/builder/config.js",
+    "build:win": "npm run build:pre && electron-builder --windows --config=buildAssets/builder/config.js",
+    "build:mac": "npm run build:pre && electron-builder --mac --config=buildAssets/builder/config.js",
+    "build:linux": "npm run build:pre && electron-builder --linux --config=buildAssets/builder/config.js",
     "lint": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter src",
     "lint:fix": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
     "format": "prettier .",
