--- a/package.json
+++ b/package.json
@@ -32,48 +32,49 @@
     "format:fix": "prettier . --write",
     "test": "npm run build:pre && xvfb-maybe -- playwright test"
   },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
+    "@reduxjs/toolkit": "^1.9.7",
+    "i18next": "^23.7.3",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.1",
+    "million": "^2.6.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.4.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0"
+  },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react-swc": "^3.4.1",
-    "electron": "^27.0.2",
+    "electron": "^27.0.4",
     "electron-builder": "^24.6.4",
     "electron-extension-installer": "^1.2.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "playwright": "^1.39.0",
     "prettier": "^3.0.3",
+    "tree-kill": "^1.2.2",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-plugin-electron": "^0.14.1",
+    "vite-plugin-electron": "^0.15.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1",
     "xvfb-maybe": "^0.2.1"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.16",
-    "@reduxjs/toolkit": "^1.9.7",
-    "i18next": "^23.6.0",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-http-backend": "^2.3.1",
-    "million": "^2.6.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.3.1",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0"
   },
   "eslintConfig": {
     "extends": "react-app"
