--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/jooy2/retron/issues"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "dev:debug": "vite -d",
@@ -30,7 +33,8 @@
     "lint:fix": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
     "format": "prettier .",
     "format:fix": "prettier . --write",
-    "test": "npm run build:pre && xvfb-maybe -- playwright test"
+    "test": "npm run build:pre && playwright test",
+    "test:linux": "npm run build:pre && xvfb-run --auto-servernum --server-args='-screen 0, 1280x960x24' -- playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -73,8 +77,7 @@
     "vite": "^4.5.0",
     "vite-plugin-electron": "^0.15.4",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-eslint": "^1.8.1",
-    "xvfb-maybe": "^0.2.1"
+    "vite-plugin-eslint": "^1.8.1"
   },
   "eslintConfig": {
     "extends": "react-app"
