--- a/.github/workflows/app-test.yml
+++ b/.github/workflows/app-test.yml
@@ -8,7 +8,7 @@ on:
       - '!*.md'
       - '!LICENSE'
       - '!.github/**'
-      - '.github/app-test.yml'
+      - '.github/workflows/app-test.yml'
   pull_request:
     branches: [master]
   workflow_dispatch:
