--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.18",
-    "@reduxjs/toolkit": "^1.9.7",
+    "@mui/material": "^5.14.19",
+    "@reduxjs/toolkit": "^2.0.1",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
@@ -48,21 +48,21 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0"
+    "react-redux": "^9.0.1",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/react": "^18.2.39",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "electron": "^27.1.2",
+    "electron": "27.1.3",
     "electron-builder": "^24.9.1",
     "electron-extension-installer": "^1.2.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -74,7 +74,7 @@
     "prettier": "^3.1.0",
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.2",
-    "vite": "^5.0.3",
+    "vite": "^5.0.5",
     "vite-plugin-electron": "^0.15.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1"
