--- a/package.json
+++ b/package.json
@@ -39,25 +39,25 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.2",
+    "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
-    "i18next": "^23.7.11",
+    "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "million": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
-    "@types/react": "^18.2.45",
+    "@playwright/test": "^1.41.0",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "electron": "27.1.3",
+    "electron": "^28.1.4",
     "electron-builder": "^24.9.1",
     "electron-extension-installer": "^1.2.0",
     "eslint": "^8.56.0",
@@ -70,12 +70,12 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "playwright": "^1.40.1",
-    "prettier": "^3.1.1",
+    "playwright": "^1.41.0",
+    "prettier": "^3.2.4",
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vite-plugin-electron": "^0.15.5",
+    "vite": "^5.0.11",
+    "vite-plugin-electron": "^0.15.6",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1"
   },
