--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
-    "vite-plugin-electron": "^0.28.2",
+    "vite-plugin-electron": "0.15.6",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1"
   },
