--- a/package.json
+++ b/package.json
@@ -37,28 +37,28 @@
     "test:linux": "npm run build:pre && xvfb-run --auto-servernum --server-args='-screen 0, 1280x960x24' -- playwright test"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.11",
-    "@reduxjs/toolkit": "^2.2.1",
-    "i18next": "^23.10.0",
+    "@mui/material": "^5.15.14",
+    "@reduxjs/toolkit": "^2.2.2",
+    "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
-    "million": "^3.0.3",
+    "million": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.5",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.2",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@playwright/test": "^1.42.1",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "electron": "^29.0.1",
-    "electron-builder": "^24.12.0",
+    "electron": "^29.1.6",
+    "electron-builder": "^24.13.3",
     "electron-extension-installer": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -68,14 +68,14 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "playwright": "^1.41.2",
+    "playwright": "^1.42.1",
     "prettier": "^3.2.5",
     "tree-kill": "^1.2.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vite-plugin-electron": "0.15.6",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6",
+    "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1"
   },
