--- a/package.json
+++ b/package.json
@@ -38,44 +38,44 @@
     "test:linux": "npm run build:pre && xvfb-run --auto-servernum --server-args='-screen 0, 1280x960x24' -- playwright test"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.4",
-    "@reduxjs/toolkit": "^2.2.6",
-    "i18next": "^23.12.2",
+    "@mui/material": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.5.2",
+    "i18next-http-backend": "^2.6.1",
     "million": "^3.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0",
+    "react-i18next": "^15.0.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.3",
-    "@types/react": "^18.3.3",
+    "@playwright/test": "^1.47.0",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/parser": "^7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "electron": "^31.2.1",
-    "electron-builder": "^24.13.3",
+    "electron": "^32.0.2",
+    "electron-builder": "^25.0.5",
     "electron-extension-installer": "^1.2.0",
-    "eslint": "^8.57.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "playwright": "^1.45.3",
+    "playwright": "^1.47.0",
     "prettier": "^3.3.3",
     "tree-kill": "^1.2.2",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.4",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.3",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-plugin-eslint": "^1.8.1"
