--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "ViteJS + Electron + React + Material-UI Template",
   "homepage": "https://github.com/jooy2/retron",
-  "author": "jooy2 <jooy2.contact@gmail.com>",
+  "author": "CDGet <jooy2.contact@gmail.com>",
   "license": "MIT",
   "main": "dist/main/index.js",
   "private": true,
