--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "bugs": {
     "url": "https://github.com/jooy2/retron/issues"
   },
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://localhost:5173"
+    }
+  },
   "engines": {
     "node": ">=18.0.0"
   },
