--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build:win:portable": "npm run build:pre && electron-builder --windows nsis:ia32 portable --config=buildAssets/builder/config.js",
     "build:mac": "npm run build:pre && electron-builder --mac --config=buildAssets/builder/config.js",
     "build:linux": "npm run build:pre && electron-builder --linux --config=buildAssets/builder/config.js",
-    "lint": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter src",
-    "lint:fix": "eslint --ext .js,.ts,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
+    "lint": "eslint . --ext .js,.ts,.vue src",
+    "lint:fix": "eslint . --ext .js,.ts,.vue --fix src",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "test": "npm run build:pre && playwright test",
@@ -58,34 +58,33 @@
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@playwright/test": "^1.51.1",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@typescript-eslint/parser": "7.17.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "@vitejs/plugin-react-swc": "^3.8.1",
+    "dotenv": "^16.5.0",
     "electron": "^35.1.4",
     "electron-builder": "^26.0.12",
     "electron-extension-installer": "^1.2.0",
-    "eslint": "8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
+    "jiti": "^2.4.2",
     "playwright": "^1.51.1",
     "prettier": "^3.5.3",
     "tree-kill": "^1.2.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.0",
     "vite": "^6.2.5",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
     "vite-plugin-eslint": "^1.8.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
