package: fix lint script

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build:win:portable": "npm run build:pre && electron-builder --windows nsis:ia32 portable --config=buildAssets/builder/config.js",
     "build:mac": "npm run build:pre && electron-builder --mac --config=buildAssets/builder/config.js",
     "build:linux": "npm run build:pre && electron-builder --linux --config=buildAssets/builder/config.js",
-    "lint": "eslint . --ext .js,.ts,.vue src",
-    "lint:fix": "eslint . --ext .js,.ts,.vue --fix src",
+    "lint": "eslint . --ext .js,.ts,.tsx,.jsx src",
+    "lint:fix": "eslint . --ext .js,.ts,.tsx,.jsx --fix src",
     "format": "prettier .",
     "format:fix": "prettier . --write",
     "test": "npm run build:pre && playwright test",
